refactor: update entities & business logic